Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson
See the end for copying conditions.

Note that changes to the GNU SASL Library is documented in lib/NEWS.
This file track changes to the remaining, non-library, parts of GNU
SASL.  That include the manual, the command line tool, and self tests.

* Version 1.2 (unreleased)

* Version 1.1 (released 2009-03-25)

** gsasl: Reading integrity protected data from server now works.
Before it didn't decode data.

** gsasl: The --quality-of-protection parameter now works.
It was just a dummy before.  Only relevant for DIGEST-MD5.  Note that
the parameter value have been modified to match the library keywords.

** Only detect sufficiently recent GnuTLS versions.
Version 2.2.x or later is required.

* Version 1.0 (released 2009-01-23)

** gsasl: New parameter --priority to specify GnuTLS priority strings.
Can be used to change TLS settings, which may be needed to talk to
some servers.

** gsasl: Print web page links in --help, per new GNU coding standard.

** tests: New self-test for the gsasl_client_suggest_mechanism function.

** doc: Modernize doxygen configuration.

** doc: Use permissive license for man pages.

** doc: Change license on the manual to GFDLv1.3+.

* Version 0.2.29 (released 2008-10-21)

** gsasl: Don't use poll with POLLOUT to avoid busy-waiting.
Reported by Enrico Scholz <enrico.scholz@informatik.tu-chemnitz.de>.

** doc: Error codes are now extracted using official library APIs.

** doc: Included cyclomatic code complexity charts of the library code.
See doc/cyclo/.

** tests: Add self test of obsolete base64 functions.

** Update gnulib files.
Improves Windows compatibility.

* Version 0.2.28 (released 2008-08-20)

** gsasl: Rewrite to use poll instead of select.
Will allow easier porting to Mingw32 in the future.

** doc: Improve Windows installation instructions in the manual.

** tests: New self test of gsasl_mechanism_name function.

* Version 0.2.27 (released 2008-07-01)
